unpackaged/main/default/objects/Lead/fields/KTTribe_Quiz_Likelytobecaught__c.field-meta.xml
<CustomField>
        <fullName>KTTribe_Quiz_Likelytobecaught__c</fullName>
        <label>You're most likely to be caught</label>
        <type>TextArea</type>
    </CustomField>