unpackaged/main/default/objects/Lead/fields/KTtribe_Quiz_PickDinner__c.field-meta.xml
<CustomField>
        <fullName>KTtribe_Quiz_PickDinner__c</fullName>
        <label>Pick Your dinner</label>
        <type>TextArea</type>
    </CustomField>