unpackaged/main/default/objects/Lead/fields/KTtribe_Quiz_Retirement__c.field-meta.xml
<CustomField>
        <fullName>KTtribe_Quiz_Retirement__c</fullName>
        <label>For you, retirement is all about</label>
        <type>TextArea</type>
    </CustomField>