unpackaged/main/default/objects/Lead/fields/KTTribe_Quiz_shipWreckjob__c.field-meta.xml
<CustomField>
        <fullName>KTTribe_Quiz_shipWreckjob__c</fullName>
        <label>You're shipwrecked with your friends</label>
        <type>TextArea</type>
    </CustomField>