unpackaged/main/default/objects/Lead/fields/KTtribe_Quiz_SpiritAnimal__c.field-meta.xml
<CustomField>
        <fullName>KTtribe_Quiz_SpiritAnimal__c</fullName>
        <label>Pick your spirit animal</label>
        <type>TextArea</type>
    </CustomField>