unpackaged/main/default/objects/Lead/fields/KTTribe_Quiz_StayActive__c.field-meta.xml
<CustomField>
        <fullName>KTTribe_Quiz_StayActive__c</fullName>
        <label>To stay active, you're most likely to</label>
        <type>TextArea</type>
    </CustomField>