unpackaged/main/default/objects/Lead/fields/KTTribe_Quiz_Themesong__c.field-meta.xml
<CustomField>
        <fullName>KTTribe_Quiz_Themesong__c</fullName>
        <label>Pick your theme song</label>
        <type>TextArea</type>
    </CustomField>