unpackaged/main/default/objects/Lead/fields/KTTribe_Quiz_Thirsty__c.field-meta.xml
<CustomField>
        <fullName>KTTribe_Quiz_Thirsty__c</fullName>
        <label>Thirsty? Pick your Poison</label>
        <type>TextArea</type>
    </CustomField>