unpackaged/main/default/objects/Lead/fields/KTTribe_Quiz_Titlememoir__c.field-meta.xml
<CustomField>
        <fullName>KTTribe_Quiz_Titlememoir__c</fullName>
        <label>The title of your memoir</label>
        <type>TextArea</type>
    </CustomField>