unpackaged/main/default/objects/Lead/fields/KTTribe_Quiz_Wontrip__c.field-meta.xml
<CustomField>
        <fullName>KTTribe_Quiz_Wontrip__c</fullName>
        <label>You've won a luxurious, all expense trip</label>
        <type>TextArea</type>
    </CustomField>