unpackaged/main/default/objects/Lead/fields/Last_Activity_Date_TX__c.field-meta.xml
<CustomField>
        <fullName>Last_Activity_Date_TX__c</fullName>
        <formula>LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Activity Date (TX)</label>
        <type>Date</type>
    </CustomField>