unpackaged/main/default/objects/Lead/fields/Last_Appointment_Set_Start_DateTime__c.field-meta.xml
<CustomField>
        <fullName>Last_Appointment_Set_Start_DateTime__c</fullName>
        <label>Last Appointment Set Start DateTime</label>
        <type>DateTime</type>
    </CustomField>