unpackaged/main/default/objects/Lead/fields/Last_Appointment_Set_With__c.field-meta.xml
<CustomField>
        <fullName>Last_Appointment_Set_With__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Appointment Set With</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </CustomField>