unpackaged/main/default/objects/Lead/fields/Last_Customer_Responded_Date_Time__c.field-meta.xml
<CustomField>
        <fullName>Last_Customer_Responded_Date_Time__c</fullName>
        <label>Last Customer Responded Date/Time</label>
        <type>DateTime</type>
    </CustomField>