unpackaged/main/default/objects/Lead/fields/Last_HubSpot_Sync__c.field-meta.xml
<CustomField>
        <fullName>Last_HubSpot_Sync__c</fullName>
        <label>Last HubSpot Sync</label>
        <type>DateTime</type>
    </CustomField>