unpackaged/main/default/objects/Lead/fields/Lead_Last_Appointment_Set_with_Phone__c.field-meta.xml
<CustomField>
        <fullName>Lead_Last_Appointment_Set_with_Phone__c</fullName>
        <formula>Last_Appointment_Set_With__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Last Appointment Set with Phone</label>
        <type>Text</type>
    </CustomField>