unpackaged/main/default/objects/Lead/fields/Lead_Source_Detail__c.field-meta.xml
<CustomField>
        <fullName>Lead_Source_Detail__c</fullName>
        <label>Lead Source Detail</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </CustomField>