unpackaged/main/default/objects/Lead/fields/Loss_Reason__c.field-meta.xml
<CustomField>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Bought Elsewhere</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Cost Objections</fullName>
                </value>
                <value>
                    <fullName>Credit Challenge</fullName>
                </value>
                <value>
                    <fullName>Just Looking</fullName>
                </value>
                <value>
                    <fullName>Location</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>Out of Market</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Timeline</fullName>
                </value>
                <value>
                    <fullName>Duplicate/Converted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>