unpackaged/main/default/objects/Lead/fields/Lot_Size__c.field-meta.xml
<CustomField>
        <fullName>Lot_Size__c</fullName>
        <label>Lot Size</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>45’</fullName>
                </value>
                <value>
                    <fullName>50’</fullName>
                </value>
                <value>
                    <fullName>55’</fullName>
                </value>
                <value>
                    <fullName>60’</fullName>
                </value>
                <value>
                    <fullName>65’</fullName>
                </value>
                <value>
                    <fullName>70’</fullName>
                </value>
                <value>
                    <fullName>75’</fullName>
                </value>
                <value>
                    <fullName>80’</fullName>
                </value>
                <value>
                    <fullName>90’</fullName>
                </value>
                <value>
                    <fullName>100’</fullName>
                </value>
                <value>
                    <fullName>50’x110’</fullName>
                </value>
                <value>
                    <fullName>60’x110’</fullName>
                </value>
                <value>
                    <fullName>70’x110’</fullName>
                </value>
                <value>
                    <fullName>60’x90’</fullName>
                </value>
                <value>
                    <fullName>70’x90’</fullName>
                </value>
                <value>
                    <fullName>80’x90’</fullName>
                </value>
                <value>
                    <fullName>90’x90’</fullName>
                </value>
                <value>
                    <fullName>100’x96’</fullName>
                </value>
                <value>
                    <fullName>Combo</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>