unpackaged/main/default/objects/Lead/fields/Lot_spec__c.field-meta.xml
<CustomField>
        <fullName>Lot_spec__c</fullName>
        <label>Lot spec</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3-Car</fullName>
                </value>
                <value>
                    <fullName>4-Car</fullName>
                </value>
                <value>
                    <fullName>Drop Garage</fullName>
                </value>
                <value>
                    <fullName>Fence</fullName>
                </value>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Golf Course</fullName>
                </value>
                <value>
                    <fullName>Green Space</fullName>
                </value>
                <value>
                    <fullName>Large Yard</fullName>
                </value>
                <value>
                    <fullName>Near Amenity</fullName>
                </value>
                <value>
                    <fullName>Near Trail</fullName>
                </value>
                <value>
                    <fullName>Pool</fullName>
                </value>
                <value>
                    <fullName>Sloped</fullName>
                </value>
                <value>
                    <fullName>Small Yard</fullName>
                </value>
                <value>
                    <fullName>View</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>