unpackaged/main/default/objects/Lead/fields/MaritalStatus__c.field-meta.xml
<CustomField>
        <fullName>MaritalStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MaritalStatus</label>
        <type>Checkbox</type>
    </CustomField>