unpackaged/main/default/objects/Lead/fields/Marketing_Division__c.field-meta.xml
<CustomField>
        <fullName>Marketing_Division__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing Division</label>
        <referenceTo>Marketing_Division__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </CustomField>