unpackaged/main/default/objects/Lead/fields/NHC_s_Working__c.field-meta.xml
<CustomField>
        <fullName>NHC_s_Working__c</fullName>
        <label>NHC’s Working</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aleks Korowski</fullName>
                </value>
                <value>
                    <fullName>Amy Franks</fullName>
                </value>
                <value>
                    <fullName>Angie Cole</fullName>
                </value>
                <value>
                    <fullName>Angie Miller</fullName>
                </value>
                <value>
                    <fullName>Belinda Shuler</fullName>
                </value>
                <value>
                    <fullName>Brian Blair</fullName>
                </value>
                <value>
                    <fullName>David Matthys</fullName>
                </value>
                <value>
                    <fullName>Dori Conway</fullName>
                </value>
                <value>
                    <fullName>James Haugen</fullName>
                </value>
                <value>
                    <fullName>Janice Wunning</fullName>
                </value>
                <value>
                    <fullName>Kendra Johnson</fullName>
                </value>
                <value>
                    <fullName>Kevin Bendy</fullName>
                </value>
                <value>
                    <fullName>Lara Ingalsbe</fullName>
                </value>
                <value>
                    <fullName>Linda Lahrman</fullName>
                </value>
                <value>
                    <fullName>Lou Niemeyer</fullName>
                </value>
                <value>
                    <fullName>Matt Schroeder</fullName>
                </value>
                <value>
                    <fullName>Randy Perry</fullName>
                </value>
                <value>
                    <fullName>Steve Chase</fullName>
                </value>
                <value>
                    <fullName>Tina Spenser</fullName>
                    <label>Tina Spencer</label>
                </value>
                <value>
                    <fullName>Vern Carlson</fullName>
                </value>
                <value>
                    <fullName>Jesse Miller</fullName>
                </value>
                <value>
                    <fullName>Joelle Hogg</fullName>
                </value>
                <value>
                    <fullName>Michael Wagner</fullName>
                </value>
                <value>
                    <fullName>Nichole Knight</fullName>
                </value>
                <value>
                    <fullName>Stephanie McKinney</fullName>
                </value>
                <value>
                    <fullName>Sylvia Grubh</fullName>
                    <label>Sylvia Ingalsbe</label>
                </value>
                <value>
                    <fullName>Dustin Compton</fullName>
                </value>
                <value>
                    <fullName>Dennis Dresch</fullName>
                </value>
                <value>
                    <fullName>Boris Shorter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>