unpackaged/main/default/objects/Lead/fields/Number_of_Children_in_Home__c.field-meta.xml
<CustomField>
        <fullName>Number_of_Children_in_Home__c</fullName>
        <label>Number of Children in Home</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>