unpackaged/main/default/objects/Lead/fields/Original_Community__c.field-meta.xml
<CustomField>
        <fullName>Original_Community__c</fullName>
        <inlineHelpText>Original Community that this lead was interested in.</inlineHelpText>
        <label>Original Community</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Abrantes</fullName>
                </value>
                <value>
                    <fullName>Addison</fullName>
                </value>
                <value>
                    <fullName>Avalon</fullName>
                </value>
                <value>
                    <fullName>Behrens Ranch</fullName>
                </value>
                <value>
                    <fullName>Belterra</fullName>
                </value>
                <value>
                    <fullName>Blanco Vista</fullName>
                </value>
                <value>
                    <fullName>Brodie Springs</fullName>
                </value>
                <value>
                    <fullName>BRP General</fullName>
                </value>
                <value>
                    <fullName>BRP General Close-out</fullName>
                </value>
                <value>
                    <fullName>BRP General Cottages</fullName>
                </value>
                <value>
                    <fullName>Brushy Creek - The Ranch</fullName>
                </value>
                <value>
                    <fullName>Bryson</fullName>
                </value>
                <value>
                    <fullName>Caliterra</fullName>
                </value>
                <value>
                    <fullName>Caliterra - Parkside</fullName>
                </value>
                <value>
                    <fullName>Caprock at Crystal Falls</fullName>
                </value>
                <value>
                    <fullName>Cap Rock Estates</fullName>
                </value>
                <value>
                    <fullName>Cimarron Hills</fullName>
                </value>
                <value>
                    <fullName>Cottages at Abrantes</fullName>
                </value>
                <value>
                    <fullName>Cottages at Crystal Falls</fullName>
                </value>
                <value>
                    <fullName>Cottages at Northwoods</fullName>
                </value>
                <value>
                    <fullName>Easton Park - Skyline Park</fullName>
                </value>
                <value>
                    <fullName>Easton Park - Union Park</fullName>
                </value>
                <value>
                    <fullName>Escalera</fullName>
                </value>
                <value>
                    <fullName>Kissing Tree</fullName>
                </value>
                <value>
                    <fullName>Mayfield Ranch</fullName>
                </value>
                <value>
                    <fullName>Paloma Lake</fullName>
                </value>
                <value>
                    <fullName>Pearson Place</fullName>
                </value>
                <value>
                    <fullName>Provence</fullName>
                </value>
                <value>
                    <fullName>Retreat at Dripping Springs</fullName>
                </value>
                <value>
                    <fullName>Rough Hollow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>