unpackaged/main/default/objects/Lead/fields/Preferred_Time_s_to_Visit__c.field-meta.xml
<CustomField>
        <fullName>Preferred_Time_s_to_Visit__c</fullName>
        <label>Preferred Time(s) to Visit</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Morning</fullName>
                </value>
                <value>
                    <fullName>Afternoon</fullName>
                </value>
                <value>
                    <fullName>Evening</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>