unpackaged/main/default/objects/Lead/fields/Property_Address__c.field-meta.xml
<CustomField>
        <fullName>Property_Address__c</fullName>
        <inlineHelpText>Address of the property customer is interested in.</inlineHelpText>
        <label>Property Address</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>