unpackaged/main/default/objects/Lead/fields/Realtor__c.field-meta.xml
<CustomField>
        <fullName>Realtor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Are You a Realtor?</label>
        <type>Checkbox</type>
    </CustomField>