unpackaged/main/default/objects/Lead/fields/Realtor_Company__c.field-meta.xml
<CustomField>
        <fullName>Realtor_Company__c</fullName>
        <label>Realtor Company</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>