unpackaged/main/default/objects/Lead/fields/Realtor_Email__c.field-meta.xml
<CustomField>
        <fullName>Realtor_Email__c</fullName>
        <label>Realtor Email</label>
        <type>Email</type>
    </CustomField>