unpackaged/main/default/objects/Lead/fields/Sales_Assistant__c.field-meta.xml
<CustomField>
        <fullName>Sales_Assistant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Assistant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </CustomField>