unpackaged/main/default/objects/Lead/fields/Sales_office_mapping__c.field-meta.xml
<CustomField>
        <fullName>Sales_office_mapping__c</fullName>
        <label>Sales office mapping</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>