unpackaged/main/default/objects/Lead/fields/Section_release_Phase__c.field-meta.xml
<CustomField>
        <fullName>Section_release_Phase__c</fullName>
        <label>Section/release/Phase</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>