unpackaged/main/default/objects/Lead/fields/Sync_to_HubSpot__c.field-meta.xml
<CustomField>
        <fullName>Sync_to_HubSpot__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync to HubSpot</label>
        <type>Checkbox</type>
    </CustomField>