unpackaged/main/default/objects/Lead/fields/To_keep_me_out_of_trouble__c.field-meta.xml
<CustomField>
        <fullName>To_keep_me_out_of_trouble__c</fullName>
        <label>To keep me out of trouble:</label>
        <type>TextArea</type>
    </CustomField>