unpackaged/main/default/objects/Lead/fields/Transferring_to_area_date__c.field-meta.xml
<CustomField>
        <fullName>Transferring_to_area_date__c</fullName>
        <inlineHelpText>If lead is transferring to the area, enter date they expect to transfer.</inlineHelpText>
        <label>Transferring to area date</label>
        <type>Date</type>
    </CustomField>