unpackaged/main/default/objects/Lead/fields/TX_Appointment_Set_for_Email__c.field-meta.xml
<CustomField>
        <fullName>TX_Appointment_Set_for_Email__c</fullName>
        <formula>CASE( MOD( datevalue(Last_Appointment_Set_Start_DateTime__c) - DATE(1900, 1, 7), 7), 0, "Sunday", 1, "Monday",  
       2, "Tuesday", 3, "Wednesday", 4, "Thursday", 5, "Friday", 6, "Saturday","Error") &amp; ", " &amp; 

       CASE(MONTH(datevalue(Last_Appointment_Set_Start_DateTime__c)), 1, "January", 2, "February", 3, "March", 4, "April", 
       5, "May", 6, "June", 7, "July", 8, "August", 9, "September", 10, "October", 11, "November", 12, "December", "None") 
       &amp; " " &amp; Text(Day(datevalue(Last_Appointment_Set_Start_DateTime__c))) &amp; " at " &amp;


       IF ( DATEVALUE(Last_Appointment_Set_Start_DateTime__c) &gt;=
	DATE ( YEAR (DATEVALUE(Last_Appointment_Set_Start_DateTime__c)),3,1)
	+
	(
	14-
	CASE( MOD(DATE ( YEAR (DATEVALUE(Last_Appointment_Set_Start_DateTime__c)),3,1) - DATE (1900,1,7),7) ,
	0,7,MOD(DATE ( YEAR (DATEVALUE(Last_Appointment_Set_Start_DateTime__c)),3,1) - DATE (1900,1,7),7))
	)
	&amp;&amp;
	DATEVALUE(Last_Appointment_Set_Start_DateTime__c) &lt;
	DATE ( YEAR (DATEVALUE(Last_Appointment_Set_Start_DateTime__c)),11,1)
	+
	(
	7-
	CASE( MOD(DATE ( YEAR (DATEVALUE(Last_Appointment_Set_Start_DateTime__c)),11,1) - DATE (1900,1,7),7) ,
	0,7,MOD(DATE ( YEAR (DATEVALUE(Last_Appointment_Set_Start_DateTime__c)),11,1) - DATE (1900,1,7),7))
	),
 
        IF(value( mid( TEXT (Last_Appointment_Set_Start_DateTime__c- 5/24), 12,2))&lt;12, 
        mid( TEXT (Last_Appointment_Set_Start_DateTime__c- 5 /24), 12,2) &amp; ":" &amp; 
        MID( TEXT( Last_Appointment_Set_Start_DateTime__c - 5 ), 15, 2 ) &amp; " AM", 
        IF(value( mid( TEXT (Last_Appointment_Set_Start_DateTime__c- 5 /24), 12,2))=12,"12" &amp; ":" &amp; 
        MID( TEXT( Last_Appointment_Set_Start_DateTime__c - 5 ), 15, 2 ) &amp; " PM" , 
        text(value( mid( TEXT (Last_Appointment_Set_Start_DateTime__c- 5/24), 12,2))-12) &amp; ":" &amp; 
        MID( TEXT( Last_Appointment_Set_Start_DateTime__c - 5 ), 15, 2 ) &amp; " PM" )) &amp; " CST",


        IF(value( mid( TEXT (Last_Appointment_Set_Start_DateTime__c- 6/24), 12,2))&lt;12, 
        mid( TEXT (Last_Appointment_Set_Start_DateTime__c- 6 /24), 12,2) &amp; ":" &amp; 
        MID( TEXT( Last_Appointment_Set_Start_DateTime__c - 6 ), 15, 2 ) &amp; " AM", 
        IF(value( mid( TEXT (Last_Appointment_Set_Start_DateTime__c- 6 /24), 12,2))=12,"12" &amp; ":" &amp; 
        MID( TEXT( Last_Appointment_Set_Start_DateTime__c - 6 ), 15, 2 ) &amp; " PM" , 
        text(value( mid( TEXT (Last_Appointment_Set_Start_DateTime__c- 6/24), 12,2))-12) &amp; ":" &amp; 
        MID( TEXT( Last_Appointment_Set_Start_DateTime__c - 6 ), 15, 2 ) &amp; " PM" )) &amp; " CST"
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TX Appointment Set Display for Email</label>
        <type>Text</type>
    </CustomField>