unpackaged/main/default/objects/Lead/fields/TX_Bathrooms__c.field-meta.xml
<CustomField>
        <fullName>TX_Bathrooms__c</fullName>
        <inlineHelpText>Legacy TX Lead field for Marketing purposes</inlineHelpText>
        <label>Bathrooms (TX)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>2.5</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>3.5</fullName>
                </value>
                <value>
                    <fullName>4+</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>