unpackaged/main/default/objects/Lead/fields/TX_Call_Rail__c.field-meta.xml
<CustomField>
        <fullName>TX_Call_Rail__c</fullName>
        <inlineHelpText>Legacy Lead field for TX Marketing</inlineHelpText>
        <label>Call Rail (TX)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>