unpackaged/main/default/objects/Lead/fields/TX_Comments_from_Contact_Us_Form__c.field-meta.xml
<CustomField>
        <fullName>TX_Comments_from_Contact_Us_Form__c</fullName>
        <label>Comments from Contact Us Form</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </CustomField>