unpackaged/main/default/objects/Lead/fields/TX_Confirmed_Appointment_Was_Kept__c.field-meta.xml
<CustomField>
        <fullName>TX_Confirmed_Appointment_Was_Kept__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hidden field used to confirm if an appointment was met or not via workflow rules.</description>
        <label>[TX] Confirmed Appointment Was Kept</label>
        <type>Checkbox</type>
    </CustomField>