unpackaged/main/default/objects/Lead/fields/TX_Current_User_is_Creator__c.field-meta.xml
<CustomField>
        <fullName>TX_Current_User_is_Creator__c</fullName>
        <description>Created for TX but is a formula to determine if the current user is the person who created the lead. Used to determine whether to send the current user an email about the lead being created.</description>
        <formula>If( CreatedById = $User.Id ,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current User is Creator</label>
        <type>Checkbox</type>
    </CustomField>