unpackaged/main/default/objects/Lead/fields/TX_Do_you_currently_own_or_rent__c.field-meta.xml
<CustomField>
        <fullName>TX_Do_you_currently_own_or_rent__c</fullName>
        <inlineHelpText>Legacy Lead field for TX Marketing</inlineHelpText>
        <label>Do you currently own or rent? (TX)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Own</fullName>
                </value>
                <value>
                    <fullName>Rent</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>